force-app/main/default/objects/Business_SLA_Config__mdt/Business_SLA_Config__mdt.object-meta.xml
<CustomObject>
    <label>Business SLA Config</label>
    <pluralLabel>Business SLA Configs</pluralLabel>
</CustomObject>