force-app/main/default/objects/Business_SLA_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether the SLA configuration is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>