force-app/main/default/objects/Business_SLA_Config__mdt/fields/Business_Hours_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Name__c</fullName>
    <description>Business hours name used to calculate SLA timing.</description>
    <label>Business Hours Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>