force-app/main/default/objects/Business_SLA_Config__mdt/fields/Deal_Review_Hours__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_Hours__c</fullName>
    <description
  >Hours allowed for internal review of a deal registration.</description>
    <label>Deal Review Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>