force-app/main/default/objects/Business_SLA_Config__mdt/fields/Lead_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lead_Response_Hours__c</fullName>
    <description
  >Hours allowed for a partner to respond to an assigned lead.</description>
    <label>Lead Response Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>