force-app/main/default/objects/Business_SLA_Config__mdt/fields/MDF_Review_Hours__c.field-meta.xml
<CustomField>
    <fullName>MDF_Review_Hours__c</fullName>
    <description
  >Hours allowed for internal review of an MDF request.</description>
    <label>MDF Review Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>