force-app/main/default/objects/Business_SLA_Config__mdt/fields/Proof_Review_Hours__c.field-meta.xml
<CustomField>
    <fullName>Proof_Review_Hours__c</fullName>
    <description
  >Hours allowed for internal review of MDF proof of performance.</description>
    <label>Proof Review Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>