force-app/main/default/objects/Business_SLA_Config__mdt/fields/SLA_Name__c.field-meta.xml
<CustomField>
    <fullName>SLA_Name__c</fullName>
    <description
  >Name of the service-level agreement configuration.</description>
    <label>SLA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>